--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -7,3 +7,11 @@ body {background-color: #dee5ec;}
     text-align: center
 
 }
+#linkstopki{
+
+    text-align: center
+}
+#stopka{
+    text-align: center
+
+}
